# interconnector-flow-model

./: .gitignore  Makefile  README.md  data_inspection.ipynb  pyproject.toml
config/: paths.yaml  project.yaml  spark.yaml
gridflow-forecast/: Makefile  README.md  pyproject.toml
gridflow-forecast/notebooks/: 00_setup_smoke_test.ipynb  01_bronze_ingest.ipynb  02_silver_clean.ipynb  04_model_baselines.ipynb  05_model_ml.ipynb
gridflow-forecast/src/gridflow/: __init__.py
gridflow-forecast/src/gridflow/cli/: main.py
gridflow-forecast/src/gridflow/common/: logging.py
gridflow-forecast/src/gridflow/etl/: spark_session.py
gridflow-forecast/src/gridflow/etl/bronze/: __init__.py  entsoe.py  fr_rte.py  uk_elexon.py
gridflow-forecast/src/gridflow/etl/gold/: __init__.py  (+1 more)
gridflow-forecast/src/gridflow/features/: calendar.py  lags.py  rolling.py  spreads.py
gridflow-forecast/src/gridflow/models/: __init__.py  ml.py  predict.py  stochastic.py
gridflow-forecast/tests/: test_features.py  test_standardise.py  test_time.py
notebooks/: 03_gold_features.ipynb
src/gridflow/cli/: main.py
src/gridflow/common/: __init__.py  constants.py  http.py  io.py  manifests.py  partitions.py  paths.py  time.py
src/gridflow/config/: sources.py
src/gridflow/etl/bronze/: common.py  eu_entsoe.py  uk_elexon.py
src/gridflow/etl/gold/: connector_features.py
src/gridflow/etl/silver/: elexon.py  entsoe.py  generation.py  standardise.py
src/gridflow/evaluation/: backtest.py  metrics.py  plots.py
src/gridflow/features/: __init__.py
src/gridflow/models/: baselines.py
(+4 files in other folders)
