[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interconnector-flow"
version = "0.1.0"
description = "Forecasting and analysing UK-European electricity interconnector flows"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ben Perryman" }
]
dependencies = [
    "pandas",
    "pyarrow",
    "requests",
    "python-dotenv",
    "scikit-learn"
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "notebook",
    "matplotlib"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]